1. When not editable, text values are now left-aligned as expected, not right-aligned. 2. Fixed problem where the widget would not know how to create a row when the widget was empty to begin with. Previously it tried to clone the last (non-new) row, but this is a problem when there is no "last row". Now adds a hidden "extra row" which is cloned when a new row is asked for. The "extra row" is not saved when the widget value is gathered. 3. Fixed problem where newly created rows after the first were effectively not editable. Clone of new row textbox now happens "without events". dfx currently pollutes arrays with an inArray function, and this is getting added to the cloned elements list of events when cloned "with events", and returns false - thus cancelling the event.
git-svn-id: http://public-cvs.squiz.net/svn/squiz-framework@457 1b08cf3a-d8dc-418b-9366-0d0b919357ef

--- a/Systems/GUI/Widgets/List/Web/GUIList.css
+++ b/Systems/GUI/Widgets/List/Web/GUIList.css
@@ -17,6 +17,10 @@
     padding: 0 5px;
 }
 
+.GUIList li.extraRow {
+    display: none;
+}
+
 .GUIList-left {
     padding-left: 13px;
     background: transparent url(listShadowLeft.png) 0 0 repeat-y;
@@ -43,6 +47,10 @@
     background: url(delete_recover.png) left top no-repeat;
     margin: 6px 2px 0px 10px;
     cursor: pointer;
+}
+
+.GUIList-right li.deleted {
+    text-align: left;
 }
 
 .GUIList-right li.deleted {
